@@ -1,5 +1,7 @@
 Revision history for File::DataClass
 
+          - Better error message in cache set
+
 0.71.1    2016-07-29 19:58:01
           - Added broken smoker
 
